styling update so that combobox options wholly visible issue #1 issue #9 issue #3

--- a/src/styling/SharedStyling.css
+++ b/src/styling/SharedStyling.css
@@ -11,7 +11,7 @@ Text {
 }
 
 .combo-box .cell {
-	  -fx-font: 14pt "Helvetica";
+	  -fx-font: 12pt "Helvetica";
 }
 
 .text-field {
